--- a/index.html
+++ b/index.html
@@ -5,25 +5,82 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link href="https://www.dafontfree.net/embed/ZnV0dXJhLW1kLWJ0LW1lZGl1bSZkYXRhLzI1L2YvMTI1OTM3L0Z1dHVyYU1lZGl1bUJULnR0Zg" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.cdnfonts.com/css/rotten" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.cdnfonts.com/css/futura-lt" rel="stylesheet">
 	<link rel="stylesheet" href="css/estilos.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <script src="js/script.js" defer></script>
 
+	<style>
+		.petals img{
+			width: 50px;
+			animation: petals 7s linear infinite;
+		}
+		.petals{
+			width: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: space-around;
+			position: absolute;
+			top: 0;
+		}
+		@keyframes petals{
+			0%{
+				transform: translateY(0);
+				opacity: 0;
+			}
+			50%{
+				opacity: 1;
+			}
+			70%{
+				opacity: 1;
+			}
+			100%{
+				transform: translateY(80vh);
+				opacity: 0;
+			}
+		}
+		.petals img:nth-child(1){
+			animation-delay: 2s;
+		}
+		.petals img:nth-child(2){
+			animation-delay: 1s;
+		}
+		.petals img:nth-child(3){
+			animation-delay: 3s;
+		}
+		.petals img:nth-child(4){
+			animation-delay: 4.5s;
+		}
+		.petals img:nth-child(5){
+			animation-delay: 3s;
+		}
+		.petals img:nth-child(6){
+			animation-delay: 6s;
+		}
+		.petals img:nth-child(7){
+			animation-delay: 2s;
+		}
+	</style>
 	<title>Wedding Design Demo</title>
 </head>
 <body>
+	<div class="petals">
+		<img src="img/flor5.png" alt="">
+		<img src="img/flor3.png" alt="">
+		<img src="img/flor4.png" alt="">
+		<img src="img/flor5.png" alt="">
+		<img src="img/flor3.png" alt="">
+		<img src="img/flor4.png" alt="">
+		<img src="img/flor5.png" alt="">
+	</div>
 	<header>
 		<div class="container">
 			<div class="row textos">
 				<div class="col-md-12">
-					<h2 class="primera_linea">M</h2>
-					<h3 class="segunda_linea">&</h3>
-					<h2 class="tercera_linea">J</h2>
 					<h2 class="cuarta_linea">SAVE THE DATE</h2>
 					<h2 class="quinta_linea">16 - 09 - 23</h2>
 				</div>
@@ -33,26 +90,33 @@
 
 	<section class="main">
 		<section class="background-menu">
-				<nav class="navbar navbar-expand-lg navbar-light">
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-					  <span class="navbar-toggler-icon"></span>
+				<nav class="navbar navbar-expand-lg navbar-light ">
+					<button 
+					class="navbar-toggler" 
+					type="button" 
+					data-bs-toggle="collapse" 
+					data-bs-target="#navbarNav" 
+					aria-controls="navbarNav" 
+					aria-expanded="false" 
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
 					</button>
-					<div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNav">
-					  <ul class="navbar-nav ">
+					<div class="collapse navbar-collapse" id="navbarNav">
+					  <ul class="navbar-nav mr-auto">
 						<li class="nav-item ">
-						  <a class="nav-link" href="#">Nosotros</a>
+						  <a class="nav-link" href="#fotos">Nosotros</a>
 						</li>
 						<li class="nav-item">
-						  <a class="nav-link" href="#">Lugar & Fecha</a>
+						  <a class="nav-link" href="#date">Lugar & Fecha</a>
 						</li>
 						<li class="nav-item">
-						  <a class="nav-link" href="#">Etiqueta</a>
+						  <a class="nav-link" href="#etiqueta">Etiqueta</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Mesa de Regalos</a>
+							<a class="nav-link" href="#regalos">Mesa de Regalos</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">RSVP</a>
+							<a class="nav-link" href="#rsvp">RSVP</a>
 						</li>
 					  </ul>
 					</div>
@@ -62,7 +126,7 @@
 				  </div>		 -->
 		</section>
 
-		<section class="fotos">
+		<section class="fotos" id="fotos">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
@@ -71,8 +135,11 @@
 								<h1 class="nosotros">NOSOTROS</h1>
 							</div>
 							<div>
-								<div class="col-xs-4 thumb d-flex justify-content-center">
-									<img src="img/fondo-novios.png" alt="">
+								<div class="col-md-12 thumb d-flex justify-content-center">
+									<img src="img/imagen-novios.png" alt="">
+								</div>
+								<div class="col-md-12 thumb d-flex justify-content-center">
+									<h1>MARGARITA SALINAS & JOSE JIMENEZ</h1>
 								</div>
 							</div>
 						</div>
@@ -92,11 +159,12 @@
 							  </div>												  
 						</div>
 					</div>
+					
 				</div>
 			</div>
 		</section>
 
-		<section class="date-container">
+		<section class="date-container" id="date">
 			<div class="container">				
 				<div class="row">
 					<div class="col-xs-4 d-flex justify-content-center titulo-fecha">
@@ -144,15 +212,25 @@
 							<h1>Iglesia <br> Santiago Apóstol</h1>
 						</div>
 						<div class="col-md-12">
-							<div class="row carrusel">
-								<div class="wrapper">
-									<i id="left" class="fa-solid fa-angle-left"></i>
-									<div class="carousel">
-									  <img src="img/iglesia1.png" alt="img" draggable="false">
-									  <img src="img/iglesia2.png" alt="img" draggable="false">
-									  <img src="img/iglesia3.png" alt="img" draggable="false">
-									</div>
-									<i id="right" class="fa-solid fa-angle-right"></i>
+							<div class="row">
+								<div class="carrusel2">
+									<ul class="carrusel-fotos">
+									  <li id="foto1"><img src="img/iglesia1.png" alt=""></li>
+									  <li id="foto2"><img src="img/iglesia2.png" alt=""></li>
+									  <li id="foto3"><img src="img/iglesia3.png" alt=""></li>
+									  <li id="foto5"><img src="img/iglesia1.png" alt=""></li>
+									  <li id="foto6"><img src="img/iglesia2.png" alt=""></li>
+									  <li id="foto7"><img src="img/iglesia3.png" alt=""></li>
+									</ul>
+									<ul class="carrusel-menu">
+									  <li><a href="#foto1"><img src="img/iglesia1.png" alt=""></a></li>
+									  <li><a href="#foto2"><img src="img/iglesia2.png" alt=""></a></li>
+									  <li><a href="#foto3"><img src="img/iglesia3.png" alt=""></a></li>
+									  <li><a href="#foto4"><img src="img/iglesia1.png" alt=""></a></li>
+									  <li><a href="#foto5"><img src="img/iglesia2.png" alt=""></a></li>
+									  <li><a href="#foto6"><img src="img/iglesia3.png" alt=""></a></li>
+
+									</ul>
 								  </div>												  
 							</div>
 						</div>
@@ -166,140 +244,136 @@
 					<!-- SALON -->
 					<div class="mapa-ubicacion-iglesia">
 						<div class="col-xs-4 d-flex justify-content-center iglesia">
-							<h1>Iglesia <br> Santiago Apóstol</h1>
+							<h1>Hacienda el secreto</h1>
 						</div>
 						<div class="col-md-12">
-							<div class="row carrusel">
-								<div class="wrapper">
-									<i id="left" class="fa-solid fa-angle-left"></i>
-									<div class="carousel">
-									  <img src="img/salon1.png" alt="img" draggable="false">
-									  <img src="img/salon2.png" alt="img" draggable="false">
-									  <img src="img/salon3.png" alt="img" draggable="false">
-									  <img src="img/salon4.png" alt="img" draggable="false">
-									</div>
-									<i id="right" class="fa-solid fa-angle-right"></i>
+							<div class="row">
+								<div class="carrusel2">
+									<ul class="carrusel-fotos">
+									  <li id="foto8"><img src="img/salon1.png" alt=""></li>
+									  <li id="foto9"><img src="img/salon2.png" alt=""></li>
+									  <li id="foto10"><img src="img/salon3.png" alt=""></li>
+									  <li id="foto11"><img src="img/salon4.png" alt=""></li>
+									  <li id="foto12"><img src="img/salon1.png" alt=""></li>
+									  <li id="foto13"><img src="img/salon2.png" alt=""></li>
+									</ul>
+									<ul class="carrusel-menu">
+									  <li><a href="#foto8"><img src="img/salon1.png" alt=""></a></li>
+									  <li><a href="#foto9"><img src="img/salon2.png" alt=""></a></li>
+									  <li><a href="#foto10"><img src="img/salon3.png" alt=""></a></li>
+									  <li><a href="#foto11"><img src="img/salon4.png" alt=""></a></li>
+									  <li><a href="#foto12"><img src="img/salon1.png" alt=""></a></li>
+									  <li><a href="#foto13"><img src="img/salon2.png" alt=""></a></li>
+
+									</ul>
 								  </div>												  
 							</div>
 						</div>
 						<div class="col-xs-4 d-flex justify-content-center direccion">
-							<span >C. María Trinidad Sánchez 975, Los Valdez, 25209 Saltillo, Coah.</span>
+							<span >Los Pastores 588, Torrecillas, 25298 Saltillo, Coah.</span>
 						</div>
 						<div class="mapa">
-							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57622.97343811518!2d-101.0131377513672!3d25.49050710000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x868813003e378665%3A0x95f44381e9afcf76!2sIglesia%20Santiago%20Ap%C3%B3stol!5e0!3m2!1ses!2smx!4v1692112420414!5m2!1ses!2smx" width="1200" height="450" style="border:0; border-radius: 20px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>						
-						</div>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3602.482537057677!2d-100.94025548818809!3d25.455558077451943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x868812885d441a1b%3A0xca89823e7c8e8189!2sHacienda%20El%20Secreto!5e0!3m2!1ses!2smx!4v1692200539740!5m2!1ses!2smx" width="1200" height="450" style="border:0; border-radius: 20px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-
-		<section class="precios">
+		<section>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h3 class="titulo">Precios</h3>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="precio col-sm-4">
-						<div class="plan verde">
-							<p class="nombre">Básico</p>
-							<p class="precio">$9</p>
-							<ul class="caracteristicas">
-								<li>1  Cuenta </li>
-								<li>10 GB de espacio</li>
-								<li>Dominio Personal</li>
-							</ul>
-							<a href="#" class="btn">Contratar Ahora</a>
-						</div>
-					</div>
-
-					<div class="precio col-sm-4">
-						<div class="plan active">
-							<p class="nombre">Standard</p>
-							<p class="precio">$19</p>
-							<ul class="caracteristicas">
-								<li>5  Cuenta </li>
-								<li>50 GB de espacio</li>
-								<li>Dominio Personal</li>
-							</ul>
-							<a href="#" class="btn">Contratar Ahora</a>
-						</div>
-					</div>
-
-					<div class="precio col-sm-4">
-						<div class="plan naranja">
-							<p class="nombre">Premium</p>
-							<p class="precio">$99</p>
-							<ul class="caracteristicas">
-								<li>Cuentas Ilimitadas</li>
-								<li>500 GB de espacio</li>
-								<li>Dominios Ilimitados</li>
-							</ul>
-							<a href="#" class="btn">Contratar Ahora</a>
-						</div>
+						<h1 class="etiqueta-title">ETIQUETA</h1>
 					</div>
 				</div>
 			</div>
 		</section>
 
-		<section class="reviews">
+		<section class="precios" id="etiqueta">	
+			<div class="container">
+			<div class="texto-etiqueta">
+				<div class="row col-md-8 ">
+					<img src="img/star-white.png" alt="" class="image-star">
+					<p>
+						El código de vestimenta es formal. Sin embargo, 
+						es importante mencionar que el lugar del evento tiene 
+						algunas áreas con jardín abierto y césped, por lo que 
+						se recomienda un calzado cómodo para las mujeres.
+					</p>
+				</div>
+			</div>
+			</div>
+		</section>
+		<section class="mesa-regalos" id="regalos">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-4 d-flex justify-content-center titulo-mesa">
+						<h1 class="mesa">MESA DE Regalos</h1>
+					</div>
+					<div class="d-flex justify-content-center info-mesa">
+						<p>Para nosotros es muy importante tu presencia y el amor que nos deseas. Si en tus planes está el obsequiarnos algún presente, apreciamos de corazón cualquier contribución al inicio de nuestra vida juntos.
+							Es por ello que compartimos contigo nuestra mesa de regalos de Amazon. Puedes tocar el icono debajo para entrar al sitio.</p>
+					</div>
+					<div class="col-xs-4 d-flex justify-content-center">
+						<a href="https://www.amazon.com.mx" class="d-flex justify-content-center"><img src="img/amazon.png" alt=""></a>
+					</div>
+				</div>
+			</div>
+		</section>
+		
+		<section class="rsvp" id="rsvp">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h3 class="titulo">Lo que nuestros clientes dicen:</h3>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="col-md-12 cliente">
-						<div class="foto">
-							<img src="img/img.jpg" alt="">
+						<div class="titulo-rsvp">
+							<h1>RSVP</h1>
 						</div>
-						<div class="review">
-							<p class="texto">“Cras hendrerit lectus massa, at vulputate nibh varius quis. Sed ac consequat ipsum.”</p>
-							<p class="nombre">Raquel Gutierrez</p>
+						<div class="agradecimiento">
+							<h2>Agradecemos nos confirmes tu asistencia a través del siguiente formulario</h2>
 						</div>
-					</div>
-					<div class="col-md-12 cliente derecha">
-						<div class="foto">
-							<img src="img/foto2.jpg" alt="">
-						</div>
-						<div class="review">
-							<p class="texto">“Proin semper sem sed quam semper mollis. Curabitur a purus a augue pulvinar viverra vel quis augue. Donec cursus sit amet lectus maximus tempor”</p>
-							<p class="nombre">- Jhon Doe</p>
-						</div>
+						<form class="row g-1 formulario col-md-4">
+							<div class="col-12">
+								<label for="nombre" class="form-label">NOMBRE</label>
+								<input type="text" class="form-control" id="nombre" placeholder="">
+							  </div>
+							<div class="col-md-12">
+							  <label for="email" class="form-label">CORREO ELECTRONICO</label>
+							  <input type="email" class="form-control" id="email">
+							</div>
+							<div class="col-12">
+							  <label for="telefono" class="form-label">TELEFONO</label>
+							  <input type="tel" class="form-control " id="telefono" placeholder="">
+							</div>
+							<div class="col-12">
+							  <label for="asistencia" class="form-label">¿CONTAMOS CON TU ASISTENCIA?</label>
+							  <select class="form-select" aria-label="asistencia" id="asistencia" name="asistencia">
+								<option selected>Confirmar asistencia</option>
+								<option value="1">Si, ahí estaré!</option>
+								<option value="2">Lo siento, no podré asistir</option>
+							  </select>
+							</div>
+							<div class="mb-3">
+								<label for="mensaje" class="form-label">COMPARTE CON NOSOTROS TUS BUENOS DESEOS</label>
+								<textarea class="form-control" id="mensaje" rows="3"></textarea>
+							  </div>
+							<div class="col-12 boton">
+							  <button type="submit" class="btn btn-primary" onclick="sendWhatsapp();">ENVIAR RSVP</button>
+							</div>
+						  </form>
 					</div>
 				</div>
 			</div>
 		</section>
-	</section>
+
 
 	<footer>
-		<div class="direccion">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8">
-						<h4 class="titulo">Contacto</h4>
-						<p class="calle">364 Delaware Avenue <br />Massapequa Park, NY 11762</p>
-						<p class="telefono">(140) 322-0934</p>
-						<p class="correo">contacto [arroba] correo.com</p>
-					</div>
-					<div class="col-md-4 logo">
-						<img src="img/logo1.png" alt="" class="logo" width="200px">
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="social">
+		<div class="final">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
-						<a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
-						<a class="youtube" href="#"><i class="fa fa-youtube"></i></a>
+						<div class="textos 	">
+							<h1>MARGARITA SALINAS & JOSE JIMENEZ</h1>
+							<span>16 - 09 - 2023</span>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -308,5 +382,26 @@
 
 <!-- js -->
 	<script src="js/countdown.js"></script>
+	<script src="js/script.js" defer></script>
+	  <script>
+		function sendWhatsapp() {
+		  var nombre = document.getElementById("nombre").value;
+		  var asistencia = document.getElementById("asistencia").value;
+	
+		  var mensaje = "";
+	
+		  if (asistencia === "1") {
+			mensaje = "Hola, soy " + nombre + " y asistiré al evento. ¡Nos vemos allí!";
+		  } else if (asistencia === "2") {
+			mensaje = "Hola, soy " + nombre + " y no podré asistir al evento. ¡Espero verlos la próxima vez!";
+		  }
+	
+		  var telefono = "8444598594";
+		  var url = "https://wa.me/" + telefono + "?text=" + encodeURIComponent(mensaje);
+	
+		window.open(url, "_blank").focus();
+		}
+		 
+	  </script>
 </body>
 </html>
