--- a/index.html
+++ b/index.html
@@ -278,114 +278,102 @@
 				</div>
 			</div>
 		</section>
-
-		<section class="precios">
+		<section>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h3 class="titulo">Precios</h3>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="precio col-sm-4">
-						<div class="plan verde">
-							<p class="nombre">Básico</p>
-							<p class="precio">$9</p>
-							<ul class="caracteristicas">
-								<li>1  Cuenta </li>
-								<li>10 GB de espacio</li>
-								<li>Dominio Personal</li>
-							</ul>
-							<a href="#" class="btn">Contratar Ahora</a>
-						</div>
-					</div>
-
-					<div class="precio col-sm-4">
-						<div class="plan active">
-							<p class="nombre">Standard</p>
-							<p class="precio">$19</p>
-							<ul class="caracteristicas">
-								<li>5  Cuenta </li>
-								<li>50 GB de espacio</li>
-								<li>Dominio Personal</li>
-							</ul>
-							<a href="#" class="btn">Contratar Ahora</a>
-						</div>
-					</div>
-
-					<div class="precio col-sm-4">
-						<div class="plan naranja">
-							<p class="nombre">Premium</p>
-							<p class="precio">$99</p>
-							<ul class="caracteristicas">
-								<li>Cuentas Ilimitadas</li>
-								<li>500 GB de espacio</li>
-								<li>Dominios Ilimitados</li>
-							</ul>
-							<a href="#" class="btn">Contratar Ahora</a>
-						</div>
+						<h1 class="etiqueta-title">ETIQUETA</h1>
 					</div>
 				</div>
 			</div>
 		</section>
 
-		<section class="reviews">
+		<section class="precios" id="etiqueta">	
+			<div class="container">
+			<div class="texto-etiqueta">
+				<div class="row col-md-8 ">
+					<img src="img/star-white.png" alt="" class="image-star">
+					<p>
+						El código de vestimenta es formal. Sin embargo, 
+						es importante mencionar que el lugar del evento tiene 
+						algunas áreas con jardín abierto y césped, por lo que 
+						se recomienda un calzado cómodo para las mujeres.
+					</p>
+				</div>
+			</div>
+			</div>
+		</section>
+		<section class="mesa-regalos" id="regalos">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-12">
-						<h3 class="titulo">Lo que nuestros clientes dicen:</h3>
+					<div class="col-xs-4 d-flex justify-content-center titulo-mesa">
+						<h1 class="mesa">MESA DE Regalos</h1>
 					</div>
-				</div>
-
-				<div class="row">
-					<div class="col-md-12 cliente">
-						<div class="foto">
-							<img src="img/img.jpg" alt="">
-						</div>
-						<div class="review">
-							<p class="texto">“Cras hendrerit lectus massa, at vulputate nibh varius quis. Sed ac consequat ipsum.”</p>
-							<p class="nombre">Raquel Gutierrez</p>
-						</div>
+					<div class="d-flex justify-content-center info-mesa">
+						<p>Para nosotros es muy importante tu presencia y el amor que nos deseas. Si en tus planes está el obsequiarnos algún presente, apreciamos de corazón cualquier contribución al inicio de nuestra vida juntos.
+							Es por ello que compartimos contigo nuestra mesa de regalos de Amazon. Puedes tocar el icono debajo para entrar al sitio.</p>
 					</div>
-					<div class="col-md-12 cliente derecha">
-						<div class="foto">
-							<img src="img/foto2.jpg" alt="">
-						</div>
-						<div class="review">
-							<p class="texto">“Proin semper sem sed quam semper mollis. Curabitur a purus a augue pulvinar viverra vel quis augue. Donec cursus sit amet lectus maximus tempor”</p>
-							<p class="nombre">- Jhon Doe</p>
-						</div>
+					<div class="col-xs-4 d-flex justify-content-center">
+						<a href="https://www.amazon.com.mx" class="d-flex justify-content-center"><img src="img/amazon.png" alt=""></a>
 					</div>
 				</div>
 			</div>
 		</section>
-	</section>
+		
+		<section class="rsvp" id="rsvp">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="titulo-rsvp">
+							<h1>RSVP</h1>
+						</div>
+						<div class="agradecimiento">
+							<h2>Agradecemos nos confirmes tu asistencia a través del siguiente formulario</h2>
+						</div>
+						<form class="row g-1 formulario col-md-4">
+							<div class="col-12">
+								<label for="nombre" class="form-label">NOMBRE</label>
+								<input type="text" class="form-control" id="nombre" placeholder="">
+							  </div>
+							<div class="col-md-12">
+							  <label for="email" class="form-label">CORREO ELECTRONICO</label>
+							  <input type="email" class="form-control" id="email">
+							</div>
+							<div class="col-12">
+							  <label for="telefono" class="form-label">TELEFONO</label>
+							  <input type="tel" class="form-control " id="telefono" placeholder="">
+							</div>
+							<div class="col-12">
+							  <label for="asistencia" class="form-label">¿CONTAMOS CON TU ASISTENCIA?</label>
+							  <select class="form-select" aria-label="asistencia" id="asistencia" name="asistencia">
+								<option selected>Confirmar asistencia</option>
+								<option value="1">Si, ahí estaré!</option>
+								<option value="2">Lo siento, no podré asistir</option>
+							  </select>
+							</div>
+							<div class="mb-3">
+								<label for="mensaje" class="form-label">COMPARTE CON NOSOTROS TUS BUENOS DESEOS</label>
+								<textarea class="form-control" id="mensaje" rows="3"></textarea>
+							  </div>
+							<div class="col-12 boton">
+							  <button type="submit" class="btn btn-primary" onclick="sendWhatsapp();">ENVIAR RSVP</button>
+							</div>
+						  </form>
+					</div>
+				</div>
+			</div>
+		</section>
+
 
 	<footer>
-		<div class="direccion">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8">
-						<h4 class="titulo">Contacto</h4>
-						<p class="calle">364 Delaware Avenue <br />Massapequa Park, NY 11762</p>
-						<p class="telefono">(140) 322-0934</p>
-						<p class="correo">contacto [arroba] correo.com</p>
-					</div>
-					<div class="col-md-4 logo">
-						<img src="img/logo1.png" alt="" class="logo" width="200px">
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="social">
+		<div class="final">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
-						<a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
-						<a class="youtube" href="#"><i class="fa fa-youtube"></i></a>
+						<div class="textos 	">
+							<h1>MARGARITA SALINAS & JOSE JIMENEZ</h1>
+							<span>16 - 09 - 2023</span>
+						</div>
 					</div>
 				</div>
 			</div>
