--- a/index.html
+++ b/index.html
@@ -363,14 +363,14 @@
 				</div>
 			</div>
 		</section>
-
+</section>
 
 	<footer>
 		<div class="final">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-12">
-						<div class="textos 	">
+					<div class="col-12">
+						<div class="textos">
 							<h1>MARGARITA SALINAS & JOSE JIMENEZ</h1>
 							<span>16 - 09 - 2023</span>
 						</div>
